2007-02-22  David Bateman  <dbateman@free.fr>

	* miscellaneous/doc.m: Find doc.info file correctly in user directories.

	* statistics/distributions/frnd.m, statistics/distributions/exprnd.m, 
	statistics/distributions/gamrnd.m, statistics/distributions/trnd.m, 
	statistics/distributions/poissrnd.m, statistics/distributions/chi2rnd.m,
	statistics/distributions/betarnd.m: Convert to use randg, rande
	and randp to accelerate.

	* pkg/pkg.m (fix_depends): Support > and < operators as well. 

2007-02-22  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: If not using gnuplot for images,
	cache data and display after xlim and ylim have been determined.

2007-02-22  Daniel J Sebald  <daniel.sebald@ieee.org>

	* plot/__uiobject_draw_axes__.m:
	Allow multiple images to be displayed with gnuplot.

2007-02-20  Rafael Laboissiere  <rafael@debian.org>

	* optimization/glpk.m: Document the fact that extra.mem does not work
	for versions of GLPK 4.15 and later.

2007-02-19  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_alloc__.in: If next available element in
	__uiobject_list__ is 0, grow list before doing anything else.
	* plot/__uiobject_grow_list__.in: Only set __uiobject_head__ on
	first call when size of __uiobject_list__ is 0.

2007-02-16  John W. Eaton  <jwe@octave.org>

	* miscellaneous/Makefile.in (SOURCES): Remove popen2.m from the list.

2007-02-16  Michael Goffioul  <michael.goffioul@swing.be>

	* miscellaneous/popen2.m: Remove as replaced with builtin.

2007-02-16  Muthiah Annamalai  <muthuspost@gmail.com>

	* specfun/nchoosek.m: Check nargin.

2007-02-15  John W. Eaton  <jwe@octave.org>

	* path/addpath.m, path/rmpath.m: Delete
	* path/Makefile.in (SOURCES): Remove them from the list.

	* plot/__uiobject_axes_init__.in, plot/__uiobject_axes_setr__.m:
	Delete title, xlabel, ylabel, and zlabel properties before
	reassigning.
	* plot/__uiobject_axes_init__.in: New arg, mode.
	Don't init outerposition if "mode" is "replace".