@@ -1,3 +1,13 @@
+2007-02-22  Daniel J Sebald  <daniel.sebald@ieee.org>
+
+	* plot/__uiobject_draw_axes__.m: Insert newline between plot
+	command and data.
+
+2007-02-22  John W. Eaton  <jwe@octave.org>
+
+	* miscellaneous/doc.m: If index search fails, try again without
+	the index search option.
+
 2007-02-22  David Bateman  <dbateman@free.fr>
 
 	* miscellaneous/doc.m: Find doc.info file correctly in user directories.
